Sync strings with poeditor

--- a/java/org/apache/catalina/core/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/core/LocalStrings_fr.properties
@@ -42,6 +42,7 @@ applicationContext.setSessionTracking.iae.ssl=Les modes de suivi de session pour
 applicationContext.setSessionTracking.ise=Les modes de suivi de session ("session tracking") du contexte [{0}] ne peuvent être définis pendant que le contexte est en cours d''exécution
 
 applicationDispatcher.allocateException=Exception d''allocation pour la servlet [{0}]
+applicationDispatcher.customResponse=La réponse de classe [{0}] n''a pas permis d''obtenir la réponse de Catalina et sera fermée immédiatement après le forward
 applicationDispatcher.deallocateException=Exception de désallocation pour la servlet [{0}]
 applicationDispatcher.forward.ise=Impossible d'utiliser faire-suivre (forward) après que la réponse ait été envoyée
 applicationDispatcher.isUnavailable=La servlet [{0}] est actuellement indisponible
@@ -54,6 +55,8 @@ applicationFilterConfig.jmxUnregister=Le désenregistrement JMX est terminé pou
 applicationFilterConfig.jmxUnregisterFail=Le désenregistrement JMX du filtre de type [{0}] nommé [{1}] a échoué
 applicationFilterConfig.preDestroy=Echec lors de l''appel de preDestroy pour le filtre nommé [{0}] de type [{1}]
 applicationFilterConfig.release=Impossible de détruite le filtre nommé [{0}] de type [{1}]
+
+applicationFilterFactory.noFilterConfig=Aucune configuration de filtre trouvée pour [{0}]
 
 applicationFilterRegistration.nullInitParam=Impossible de fixer le paramètre d''initialisation du filtre, à cause d''un nom ou d''une valeur nulle, nom [{0}], valeur [{1}]
 applicationFilterRegistration.nullInitParams=Impossible de fixer les paramètres d''initialisation du filtre, à cause d''un nom ou d''une valeur nulle, nom [{0}], valeur [{1}]
