--- a/java/org/apache/catalina/filters/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/filters/LocalStrings_fr.properties
@@ -16,6 +16,7 @@
 addDefaultCharset.unsupportedCharset=Le jeu de caractères [{0}] spécifié n''est pas supporté
 
 corsFilter.invalidPreflightMaxAge=Incapable d'analyser "preflightMaxAge"
+corsFilter.invalidRequest=Requête CORS invalide; Origine [{0}] Méthode [{1}] Access-Control-Request-Headers [{2}]
 corsFilter.invalidSupportsCredentials=Il est interdit de configurer supportsCredentials=[true] alors que allowedOrigins=[*]
 corsFilter.nullRequest=L'objet HttpServletRequest est nul
 corsFilter.nullRequestType=L'objet CORSRequestType est nul
