--- a/java/org/apache/catalina/filters/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/filters/LocalStrings_ja.properties
@@ -16,6 +16,7 @@
 addDefaultCharset.unsupportedCharset=指定された文字セット [{0}] はサポートされていません
 
 corsFilter.invalidPreflightMaxAge=preflightMaxAgeを解析できません
+corsFilter.invalidRequest=無効な CORS リクエスト; Origin [{0}] Method [{1}] Access-Control-Request-Headers [{2}]
 corsFilter.invalidSupportsCredentials=allowedOrigins = [*]の場合、supportsCredentials = [true]を設定することはできません。
 corsFilter.nullRequest=HttpServletRequestオブジェクトがnullです
 corsFilter.nullRequestType=CORSRequestType オブジェクトが null です。
