--- a/java/org/apache/catalina/filters/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/filters/LocalStrings_zh_CN.properties
@@ -52,6 +52,8 @@ http.403=禁止访问指定资源 [{0}] 。
 httpHeaderSecurityFilter.clickjack.invalid=为防点击挟持的响应消息头指定了非法值 [{0}]
 httpHeaderSecurityFilter.committed=在进入HttpHeaderSecurityFilter的时候响应消息已经提交导致不能添加响应消息头
 
+rateLimitFilter.initialized=RateLimitFilter [{0}] 初始值是每 [{2}] 秒 [{1}] 个请求。实际值是每 [{4}] 秒 [{3}]。 [{5}]。
+
 remoteCidrFilter.invalid=为[{0}]提供的配置无效。有关详细信息，请参阅以前的消息。
 remoteCidrFilter.noRemoteIp=客户端没有 IP 地址，请求被拒绝。
 
