--- a/java/org/apache/catalina/security/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/security/LocalStrings_fr.properties
@@ -13,6 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+SecurityListener.buildDateAgeUnreadable=Impossible de lire buildDateWarningAgeDays [{0}] qui a été configuré, le défaut de [{1}] jours sera utilisé
+SecurityListener.buildDateIsOld=La version de Tomcat a été compilée il y a plus de {0} jours, vous devriez songer à la mettre à jour
+SecurityListener.buildDateUnreadable=La date de compilation [{0}] du serveur n''est pas lisible en tant que date ISO-8601
 SecurityListener.checkUmaskFail=Tentative de démarrage avec un paramètre umask [{0}], qui a été bloquée par l''écouteur org.apache.catalina.security.SecurityListener (configuré habituellement dans CATALINA_BASE/conf/server.xml) car l''umask doit être au moins aussi restreint que [{1}]
 SecurityListener.checkUmaskNone=Pas de définition du "umask" trouvée dans la propriété système [{0}]. Il apparaît toutefois que Tomcat tourne sur une plateforme qui supporte l''utilisation de umask. La propriété système est typiquement définie dans CATALINA_HOME/bin/catalina.sh. Le Lifecycle Listener org.apache.catalina.security.SecurityListener (généralement configuré dans CATALINA_BASE/conf/server.xml) s''attend à un umask au moins aussi restrictif que [{1}]
 SecurityListener.checkUmaskParseFail=Impossible de traiter la valeur [{0}] comme un umask valide
