--- a/java/org/apache/catalina/servlets/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_fr.properties
@@ -25,6 +25,8 @@ cgiServlet.find.location=Recherche d''un fichier en [{0}]
 cgiServlet.find.path=Script CGI demandé au chemin [{0}] relatif au CGI à [{1}]
 cgiServlet.invalidArgumentDecoded=Les paramètres de ligne de commande décodés [{0}] ne correspondent pas au modèle cmdLineArgumentsDecoded configuré [{1}]
 cgiServlet.invalidArgumentEncoded=Les paramètres de ligne de commande encodés [{0}] ne correspondent pas au modèle cmdLineArgumentsEncoded configuré [{1}]
+cgiServlet.invalidCommand=Un caractère illégal (''.'' or ''..'') a été trouvé dans le chemin de commande CGI, le CGI [{0}] n''est pas exécuté
+cgiServlet.notReady=Le Servlet CGI n'est pas prêt à fonctionner
 cgiServlet.runBadHeader=Mauvaise ligne d''en-tête [{0}]
 cgiServlet.runFail=Problèmes d'IO lors de l'exécution du CGI
 cgiServlet.runHeaderReaderFail=Problème d'E/S lors de la fermeture du lecteur de headers
