--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -25,6 +25,8 @@ cgiServlet.find.location=ファイル [{0}] を探しています。
 cgiServlet.find.path=パス [{0}] でCGIロケーション [{1}] に対して相対的に要求されたCGIスクリプト
 cgiServlet.invalidArgumentDecoded=デコードされたコマンドライン引数 [{0}] は、構成されたcmdLineArgumentsDecoded パターン [{1}] にマッチしません
 cgiServlet.invalidArgumentEncoded=エンコードされたコマンドライン引数 [{0}] は、構成されたcmdLineArgumentsEncoded パターン [{1}] にマッチしません
+cgiServlet.invalidCommand=CGI コマンド パスに不正な文字 (''.'' または ''..'') が検出されました。CGI [{0}] は実行されていません
+cgiServlet.notReady=CGI サーブレットは実行の準備ができていません
 cgiServlet.runBadHeader=悪いヘッダライン [{0}]
 cgiServlet.runFail=CGI処理中のIO問題
 cgiServlet.runHeaderReaderFail=ヘッダーリーダーを閉じる時の I/O 問題
