--- a/java/org/apache/catalina/storeconfig/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/storeconfig/LocalStrings_fr.properties
@@ -26,6 +26,7 @@ globalNamingResourcesSF.noFactory=Impossible de trouver la fabrique pour enregis
 globalNamingResourcesSF.wrongElement=Mauvais élément [{0}]
 
 registry.loadClassFailed=Echec de chargement de la classe [{0}]
+registry.noDescriptor=Impossible de trouver le descripteur pour la clé [{0}]
 
 standardContextSF.cannotWriteFile=Impossible d''écrire le fichier à [{0}]
 standardContextSF.canonicalPathError=Impossible d''obtenir le chemin canonique du fichier de configuration [{0}]
