--- a/java/org/apache/catalina/tribes/membership/cloud/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/membership/cloud/LocalStrings_fr.properties
@@ -14,10 +14,16 @@
 # limitations under the License.
 
 abstractStream.CACertUndefined=Le fichier certificat CA n'est pas défini
+abstractStream.connection=[{0}] ouverture de la connection: url [{1}], en têtes [{2}], connectTimeout [{3}], readTimeout [{4}]
 abstractStream.fileNotFound=Le fichier [{0}] définissant l''autorité des certificats (CA) n''a pas été trouvé
+abstractStream.invalidTimeout=Ni connectTimeout [{0}] ni readTimeout [{1}] ne peuvent être inférieurs à zéro pour l''URLConnection
 abstractStream.trustManagerError=Echec de création d''un gestionnaire de confiance (trust manager) pour [{0}]
 
 certificateStream.clientCertError=Impossible de créer le gestionnaire de clés pour [{0}] ([{1}])
+
+cloudMembershipProvider.add=Le membre [{0}] a été ajouté
+cloudMembershipProvider.remove=Le membre [{0}] a disparu
+cloudMembershipProvider.start=L''espace de noms [{0}] a été défini, le cluster est activé
 
 cloudMembershipService.stopFail=Impossible d''arrêter le registre de membres statique, niveau : [{0}]
 
