--- a/java/org/apache/catalina/valves/rewrite/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/valves/rewrite/LocalStrings_ja.properties
@@ -26,3 +26,8 @@ rewriteValve.invalidMapClassName=Mapクラス名[{0}]が無効です。
 rewriteValve.noConfiguration=設定リソースが見つかりません [{0}]
 rewriteValve.readConfiguration=[/WEB-INF/{0}] から構成を読み取ります
 rewriteValve.readError=構成の読み取りエラー
+
+substitution.badType=置換 [{1}] 内の不正なタイプ [{0}]
+substitution.invalid=無効な置換 [{0}]
+substitution.missingDigit=置換 [{0}] に数字または中括弧がありません
+substitution.noMap=マップ [{0}] が置換 [{1}] に見つかりません
