--- a/java/org/apache/tomcat/websocket/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_ja.properties
@@ -96,6 +96,7 @@ wsRemoteEndpoint.closedDuringMessage=WebSocket セッションが切断されて
 wsRemoteEndpoint.closedOutputStream=このメソッドは、OutputStreamが閉じられたときに呼び出されない場合があります。
 wsRemoteEndpoint.closedWriter=Writerがクローズされているため、このメソッドを呼び出すことはできません。
 wsRemoteEndpoint.encoderDestoryFailed=タイプ [{0}] のエンコーダーの破棄に失敗しました
+wsRemoteEndpoint.encoderError=エンコードエラー [{0}]
 wsRemoteEndpoint.flushOnCloseFailed=セッションが閉じられた後にまだ可能であったバッチメッセージ。残りのバッチメッセージをフラッシュできません。
 wsRemoteEndpoint.invalidEncoder=指定されたタイプ [{0}] のエンコーダをインスタンス化できませんでした
 wsRemoteEndpoint.noEncoder=クラス [{0}] のオブジェクトのエンコーダーが未指定です。
