--- a/java/org/apache/catalina/valves/rewrite/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/valves/rewrite/LocalStrings_fr.properties
@@ -26,3 +26,8 @@ rewriteValve.invalidMapClassName=Le nom de la classe [{0}] de la structure est i
 rewriteValve.noConfiguration=Aucune ressource de configuration trouvée à [{0}]
 rewriteValve.readConfiguration=Lecture de la configuration depuis [/WEB-INF/{0}]
 rewriteValve.readError=Erreur lors de la lecture de la configuration
+
+substitution.badType=Mauvais type [{0}] dans la substitution [{1}]
+substitution.invalid=Substitution invalide [{0}]
+substitution.missingDigit=La substitution [{0}] manque un chiffre ou une accolade
+substitution.noMap=La carte [{0}] n''a pas été trouvée dans la substitution [{1}]
