--- a/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
@@ -96,6 +96,7 @@ wsRemoteEndpoint.closedDuringMessage=Le reste du message ne sera pas envoyé par
 wsRemoteEndpoint.closedOutputStream=La méthode ne peut pas être appelée alors que l'OutputStream a été fermée
 wsRemoteEndpoint.closedWriter=Cette méthode ne doit pas être appelée car le Writer a été fermé
 wsRemoteEndpoint.encoderDestoryFailed=Echec de la destruction de l''encodeur de type [{0}]
+wsRemoteEndpoint.encoderError=Erreur d''encodage [{0}]
 wsRemoteEndpoint.flushOnCloseFailed=Le groupement de messages est toujours actif après fermeture de la session, impossible d'envoyer les messages restants
 wsRemoteEndpoint.invalidEncoder=L''encodeur spécifié de type [{0}] n''a pu être instancié
 wsRemoteEndpoint.noEncoder=Pas d''encodeur spécifié pour un objet de classe [{0}]
