Sync strings with poeditor

--- a/java/org/apache/catalina/session/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/session/LocalStrings_fr.properties
@@ -22,6 +22,7 @@ dataSourceStore.commitSQLException=Une SQLException a été retournée lors du c
 dataSourceStore.loading=Chargement de la Session [{0}] depuis la base de données [{1}]
 dataSourceStore.missingDataSource=Aucune source de données n'est disponible
 dataSourceStore.missingDataSourceName=Aucun nom JNDI valide n'a été donné.
+dataSourceStore.noObject=Aucun objet de persistence de données trouvé pour la session [{0}]
 dataSourceStore.removing=Retrait de la Session [{0}] de la base de données [{1}]
 dataSourceStore.saving=Sauvegarde de la Session [{0}] vers la base de données [{1}]
 dataSourceStore.wrongDataSource=Impossible d''ouvrir la DataSource JNDI [{0}]
