--- a/java/org/apache/catalina/session/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/session/LocalStrings_ja.properties
@@ -22,6 +22,7 @@ dataSourceStore.commitSQLException=クローズ前のデータベース接続の
 dataSourceStore.loading=セッション [{0}] をデータベース [{1}] からロードします
 dataSourceStore.missingDataSource=利用可能なデータソースがありません
 dataSourceStore.missingDataSourceName=指定された JNDI 名は正常ではありません
+dataSourceStore.noObject=セッション [{0}] の永続化データ オブジェクトが見つかりませんでした
 dataSourceStore.removing=セッション [{0}] をデータベース [{1}] から削除します
 dataSourceStore.saving=セッション [{0}] をデータベース [{1}] に保存します
 dataSourceStore.wrongDataSource=JNDIデータソース [{0}] を開くことができません
