Improvements to Japanese translations by tak7iji

--- a/java/org/apache/coyote/http2/LocalStrings_ja.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_ja.properties
@@ -130,7 +130,7 @@ upgradeHandler.allocate.left=コネクション [{0}]、ストリーム [{1}]、
 upgradeHandler.connectionError=接続エラー
 upgradeHandler.enableRfc7450Priorities=接続 [{0}] は、RFC 7450 優先順位が初期接続設定フレームで無効にされた後に有効にならない場合があります (RFC 9218 を参照)
 upgradeHandler.fallToDebug=\n\
-\ 注: HTTP/2 ストリームのエラーがさらに発生すると、DEBUG レベルでログに記録されます。
+\ 注: 以降のHTTP/2 ストリームエラーの発生はDEBUGレベルでログに出力されます。
 upgradeHandler.goaway.debug=コネクション [{0}]、Goaway、最終ストリーム [{1}]、エラーコード [{2}]、デバッグデータ [{3}]
 upgradeHandler.init=コネクション[{0}]、状態[{1}]
 upgradeHandler.invalidPreface=コネクション[{0}]、無効なConnection Preface
