--- a/java/org/apache/catalina/security/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/security/LocalStrings_ja.properties
@@ -13,6 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+SecurityListener.buildDateAgeUnreadable=設定された buildDateWarningAgeDays の値 [{0}] を読み取ることができません。デフォルトの [{1}] 日を使用します。
+SecurityListener.buildDateIsOld=このバージョンの Tomcat は {0} 日以上前にビルドされました。 現在のバージョンにアップグレードすることを検討してください。
+SecurityListener.buildDateUnreadable=サーバーのビルド日 [{0}] は ISO 8601 形式の日付として読み取ることができません。
 SecurityListener.checkUmaskFail=[{0}] のumask設定で開始しようとしました。 少なくとも [{1}] と同じようにumaskを指定しないでTomcatを実行すると、ライフサイクルリスナーのorg.apache.catalina.security.SecurityListener（通常はCATALINA_BASE/conf/server.xmlで構成されています）によってブロックされます
 SecurityListener.checkUmaskNone=システムプロパティ [{0}] にumask設定が見つかりませんでした。しかし、Tomcatはumaskをサポートするプラットフォームで動作しているようです。システムプロパティは通常、CATALINA_HOME/bin/catalina.shに設定されます。ライフサイクルリスナーのorg.apache.catalina.security.SecurityListener（通常はCATALINA_BASE/conf/server.xmlに設定されています）では、少なくとも [{1}] と同じくらい拘束されたumaskが必要です。
 SecurityListener.checkUmaskParseFail=値[{0}]を有効なumaskとして解析できませんでした。
