Improvements to French translations. (remm)

--- a/java/org/apache/catalina/core/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/core/LocalStrings_fr.properties
@@ -173,6 +173,11 @@ naming.wsdlFailed=fichier wsdl [{0}] non trouvé
 
 noPluggabilityServletContext.notAllowed=La section 4.4 de la spécification Servlet 3.0 ne permet pas à cette méthode d'être appelée à partir d'un ServletContextListener qui n'a pas été déclaré dans web.xml, un web-fragment.xml, ou annoté avec @WebListener
 
+openssllistener.destroy=Erreur d'arrêt d'OpenSSL
+openssllistener.initializeFIPSFailed=Echec d'entrée en mode FIPS
+openssllistener.java22=Le support d'OpenSSL dans Tomcat nécessite l'API FFM qui est disponible dans Java 22 ou plus récent, Apache Tomcat Native devrait être utilisé à la place
+openssllistener.sslInit=Erreur d'initialisation d'OpenSSL
+
 propertiesRoleMappingListener.linkedRole=Le rôle de l''application [{0}] a été associé avec succès au rôle [{1}]
 propertiesRoleMappingListener.linkedRoleCount=[{0}] rôles de l''application ont été associés à des rôles
 propertiesRoleMappingListener.roleMappingFileEmpty=Le fichier d'association de rôles ne peut être vide
