Improvements to Japanese translations by tak7iji. (markt)

--- a/java/org/apache/catalina/core/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/core/LocalStrings_ja.properties
@@ -173,6 +173,11 @@ naming.wsdlFailed=wsdl ファイル [{0}] が見つかりませんでした。
 
 noPluggabilityServletContext.notAllowed=Servlet 3.0仕様の4.4節では、web.xmlに定義されていないServletContextListener、web-fragment.xmlファイル、@WebListenerアノテーションからこのメソッドを呼び出すことはできません。
 
+openssllistener.destroy=OpenSSL のシャットダウンに失敗しました
+openssllistener.initializeFIPSFailed=FIPS モードに入るのに失敗しました
+openssllistener.java22=Tomcat OpenSSL サポートには、Java 22 以降で利用可能な FFM API が必要です。代わりに tomcat ネイティブを使用する必要があります
+openssllistener.sslInit=SSLEngineの初期化に失敗しました。
+
 propertiesRoleMappingListener.linkedRole=アプリケーション ロール [{0}] を技術ロール [{1}] にリンクしました
 propertiesRoleMappingListener.linkedRoleCount=アプリケーション ロール [{0}] を技術ロールにリンクしました
 propertiesRoleMappingListener.roleMappingFileEmpty=ロール マッピング ファイルを空にすることはできません
