Updates to French translations

--- a/java/org/apache/tomcat/util/http/parser/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/http/parser/LocalStrings_fr.properties
@@ -45,6 +45,7 @@ http.tooManyColons=Une adresse IPv6 ne peut pas contenir plus de deux caractère
 http.tooManyDoubleColons=Une adresse IPv6 ne peut contenir qu'une seule séquence "::"
 http.tooManyHextets=L''adresse IPv6 contient [{0}] groupes de 4 octets mais une adresse IPv6 valide ne doit pas en avoir plus de 8
 
+httpHeaderParser.invalidCrlfNoCR=Séquence de fin de ligne invalide (pas de CR avant LF)
 httpHeaderParser.invalidHeader=La ligne d''en-tête HTTP [{0}] ne respecte pas la RFC 9112. La requête a été rejetée.
 
 sf.bareitem.invalidCharacter=Le caractère [{0}] invalide a été rencontré en début d''un objet
