--- a/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
@@ -140,6 +140,8 @@ sniExtractor.tooEarly=Il est illégal d'appeler cette méthode avant que le hell
 socket.closed=Le socket associé à cette connection a été fermé
 socket.sslreneg=Exception lors de la renégociation de la connection SSL
 
+socketProperties.negativeUnlockTimeout=La valeur négative pour unlockTimeout a été ignorée
+
 socketWrapper.readTimeout=Timeout en lecture
 socketWrapper.writeTimeout=Timeout en écriture
 
