--- a/java/org/apache/coyote/http11/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/http11/LocalStrings_fr.properties
@@ -22,6 +22,7 @@ abstractHttp11Protocol.upgradeJmxRegistrationFail=Impossible d'enregistrer le pr
 http11processor.fallToDebug=\n\
 \ Note : les occurrences suivantes d'erreurs d'analyse de requête HTTP seront enregistrées au niveau DEBUG.
 http11processor.header.parse=Erreur lors de l'analyse d'un en-tête de requête HTTP
+http11processor.request.alreadyChunked=Erreur lors de la préparation de la requête, l''encodage de transfert liste chunked avant [{0}]
 http11processor.request.finish=Erreur en terminant la requête
 http11processor.request.inconsistentHosts=L'hôte spécifié dans la ligne de requête ne correspond pas à celui de l'en-tête hôte
 http11processor.request.invalidScheme=La requête HTTP contenait une URi absolue avec un schéma invalide
@@ -34,6 +35,8 @@ http11processor.request.noHostHeader=La requ6ete HTTP/1.1 ne contient pas d'en-t
 http11processor.request.nonNumericContentLength=La requête contenait un en-tête content-length avec une valeur non numérique
 http11processor.request.prepare=Echec de préparation de la requête
 http11processor.request.process=Erreur de traitement de la requête
+http11processor.request.unsupportedEncoding=Erreur lors de la préparation de la requête, l''encodage de transfert [{0}] n''est pas supporté
+http11processor.request.unsupportedVersion=Erreur lors de la préparation de la requête, la version HTTP [{0}] n''est pas supportée
 http11processor.response.finish=Erreur en finissant la réponse
 http11processor.response.invalidHeader=L''en-tête de réponse HTTP [{0}] avec la valeur [{1}] a été enlevé de la réponse car il est invalide
 http11processor.sendfile.error=Erreur d'envoi des données avec sendfile, cela peut être causé par des attributs de démarrage ou de fin incorrects dans la requête
