--- a/java/org/apache/tomcat/util/threads/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings_fr.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+limitLatch.exceeded=La limite [{0}] du loquet (latch) a été dépassée
+
 taskQueue.notRunning=L'exécuteur n'a pas été démarré, impossible d'ajouter une commande à la file d'attente
 
 taskThread.exiting=Le fil d'exécution s'arrête de manière volontaire
