--- a/java/org/apache/tomcat/util/threads/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings_ja.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+limitLatch.exceeded=ラッチが制限 [{0}] を超えました
+
 taskQueue.notRunning=Executor が動作していないため、コマンドを強制的にキューへ登録できません
 
 taskThread.exiting=スレッドが意図的に終了しました
