Updates to French translations

--- a/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings_fr.properties
@@ -158,6 +158,8 @@ socket.apr.write.error=Erreur inattendue [{0}] lors de l''écriture de données 
 socket.closed=Le socket associé à cette connection a été fermé
 socket.sslreneg=Exception lors de la renégociation de la connection SSL
 
+socketProperties.negativeUnlockTimeout=La valeur négative pour unlockTimeout a été ignorée
+
 socketWrapper.readTimeout=Timeout en lecture
 socketWrapper.writeTimeout=Timeout en écriture
 
