Updates to Japanese translations

--- a/java/org/apache/tomcat/util/net/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings_ja.properties
@@ -158,6 +158,8 @@ socket.apr.write.error=ラッパー [{2}] 経由で APR/native ソケット [{1}
 socket.closed=このコネクションに関連付けられたソケットは閉じられました。
 socket.sslreneg=SSLコネクションの再ネゴシエーション時の例外
 
+socketProperties.negativeUnlockTimeout=unlockTimeout に設定された負の値は無視されました
+
 socketWrapper.readTimeout=読み込みタイムアウト
 socketWrapper.writeTimeout=書き込みタイムアウト
 
