--- a/java/org/apache/catalina/core/LocalStrings_cs.properties
+++ b/java/org/apache/catalina/core/LocalStrings_cs.properties
@@ -24,7 +24,7 @@ applicationDispatcher.specViolation.response=Původní ServletResponse nebo zapo
 
 applicationFilterRegistration.nullInitParams=Není možné nastavit inicializační parametry pro filtr kvůli hodnotě null ve jménu či hodnotě. Jméno [{0}], Hodnota [{1}]
 
-applicationHttpRequest.sessionEndAccessFail=Výjimka vyvolala ukončení přístupu k session během recykllování dotazu
+applicationHttpRequest.sessionEndAccessFail=Výjimka vyvolala ukončení přístupu k session během recyklování dotazu
 
 aprListener.initializingFIPS=Inicializace FIPS módu...
 
