--- a/java/org/apache/catalina/connector/LocalStrings_cs.properties
+++ b/java/org/apache/catalina/connector/LocalStrings_cs.properties
@@ -25,6 +25,6 @@ coyoteInputStream.nbNotready=V neblokujícím módu nelze číst ServletInputStr
 coyoteRequest.filterAsyncSupportUnknown=Nelze určit, zda některý filtr nepodporuje asynchronní zpracování
 coyoteRequest.gssLifetimeFail=Selhalo získání zbývající doby trvání pro uživatele [{0}]
 coyoteRequest.noMultipartConfig=Nelze zpracovat části, protože nebyla poskytnuta žádná multi-part konfigurace
-coyoteRequest.sessionEndAccessFail=Výjimka vyvolala ukončení přístupu k session během recykllování dotazu
+coyoteRequest.sessionEndAccessFail=Výjimka vyvolala ukončení přístupu k session během recyklování dotazu
 
 responseFacade.nullResponse=Objekt odpovědi byl recyklován a již není asociován s touto fasádou
