Improvements to French translations. (remm)

--- a/java/org/apache/coyote/http2/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_fr.properties
@@ -121,9 +121,11 @@ streamProcessor.error.connection=Connection [{0}], Stream [{1}], Une erreur s''e
 streamProcessor.error.stream=Connection [{0}], Flux [{1}], Une erreur d''est produite durant le traitement qui a été fatale au flux
 streamProcessor.flushBufferedWrite.entry=Connection [{0}], Flux [{1}], Envoi des écritures mises en tampon
 streamProcessor.service.error=Erreur durant le traitement de la requête
+streamProcessor.streamReadTimeout=Délai d'attente de lecture dépassé pour la Stream
 
 streamStateMachine.debug.change=Connection [{0}], Flux [{1}], L’état a changé de [{2}] vers [{3}]
 streamStateMachine.invalidFrame=Connection [{0}], Flux [{1}], Etat [{2}], Type de trame [{3}]
+streamStateMachine.invalidReset=Connection [{0}], Stream [{1}], la Stream ne doit pas être réinitialisée lorsqu''elle est IDLE
 
 upgradeHandler.allocate.debug=Connection [{0}], Flux [{1}], [{2}] octets alloués
 upgradeHandler.allocate.left=Connection [{0}], Flux [{1}], [{2}] octets désalloués, essai d''allocation aux enfants
