Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/coyote/http2/LocalStrings_ja.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_ja.properties
@@ -121,6 +121,7 @@ streamProcessor.error.connection=コネクション [{0}]、ストリーム [{1}
 streamProcessor.error.stream=コネクション [{0}]、ストリーム [{1}]、処理中にストリームに致命的なエラーが発生しました
 streamProcessor.flushBufferedWrite.entry=コネクション [{0}]、ストリーム [{1}]、書き込み用バッファをフラッシュします。
 streamProcessor.service.error=リクエスト処理中のエラー
+streamProcessor.streamReadTimeout=ストリーム読み込みタイムアウト
 
 streamStateMachine.debug.change=コネクション [{0}]、ストリーム [{1}]、状態を [{2}] から [{3}] へ変更しました。
 streamStateMachine.invalidFrame=コネクション [{0}]、ストリーム [{1}]、状態 [{2}]、フレーム種類 [{3}]
