Improvements to Chinese translations by fangzheng.

--- a/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
@@ -47,8 +47,7 @@ applicationDispatcher.forward.ise=提交响应后无法转发
 applicationDispatcher.isUnavailable=Servlet[{0}]当前不可用
 applicationDispatcher.serviceException=Servlet[{0}]的Servlet.service()抛出异常
 applicationDispatcher.specViolation.request=原始ServletRequest或包装的原始ServletRequest未传递给RequestDispatcher，这违反了SRV.8.2和SRV.14.2.5.1
-applicationDispatcher.specViolation.response=原始的ServletResponse或包装后的ServletResponse未传递给RequestDispatcher，原因：违反了SRV.8.2和SRV.14.2.5.1\n\
-\n
+applicationDispatcher.specViolation.response=原始的ServletResponse或包装后的ServletResponse未传递给RequestDispatcher，原因：违反了SRV.8.2和SRV.14.2.5.1
 
 applicationFilterConfig.jmxRegisterFail=类型为[{0}]且名称为[{1}]的筛选器的JMX注册失败
 applicationFilterConfig.jmxUnregister=已完成对类型为[{0}]且名称为[{1}]的筛选器的JMX取消注册。
@@ -157,6 +156,9 @@ naming.unbindFailed=解绑对象[{0}]失败
 naming.wsdlFailed=未找到 wsdl 文件：[{0}]
 
 noPluggabilityServletContext.notAllowed=Servlet 3.0规范的第4.4节不允许从未在web.xml，web-fragment.xml文件中定义或未用@WebListener注释的ServletContextListener调用此方法。
+
+openssllistener.initializeFIPSFailed=无法进入FIPS模式
+openssllistener.sslInit=OpenSSL初始化失败
 
 propertiesRoleMappingListener.roleMappingFileEmpty=角色映射文件不能为空
 propertiesRoleMappingListener.roleMappingFileFail=加载角色映射文件[{0}]失败
