--- a/java/org/apache/catalina/manager/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/manager/LocalStrings_zh_CN.properties
@@ -51,7 +51,7 @@ htmlManagerServlet.connectorStateThreadCount=当前线程数：
 htmlManagerServlet.deployButton=部署
 htmlManagerServlet.deployConfig=XML配置文件路径：
 htmlManagerServlet.deployPath=Context路径：
-htmlManagerServlet.deployServer=服务器上.部署的目录或WAR文件
+htmlManagerServlet.deployServer=服务器上的部署目录或WAR文件
 htmlManagerServlet.deployTitle=部署
 htmlManagerServlet.deployUpload=要部署的WAR文件
 htmlManagerServlet.deployUploadFail=失败 - 部署上传失败，异常信息：[{0}]
@@ -127,6 +127,7 @@ managerServlet.deployed=OK - 以应用path [{0}] 部署应用
 managerServlet.deployedButNotStarted=失败 - 在上下文[{0}]下部署应用程序，但是上下文启动失败。
 managerServlet.error.deploy=部署[{0}]错误
 managerServlet.error.idleParam=无法解析闲置整数参数[{0}]
+managerServlet.error.jmx=JMX错误
 managerServlet.error.reload=重新加载[{0}]错误
 managerServlet.error.resources=显示类型[{0}]的资源错误
 managerServlet.error.serverInfo=显示服务器信息错误
