--- a/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
@@ -72,7 +72,7 @@ http2Parser.processFrameData.window=连接[{0}]，客户端发送的数据比流
 http2Parser.processFrameHeaders.decodingDataLeft=数据在HPACK解码后依然保留 - 它本应该被消费掉
 http2Parser.processFrameHeaders.decodingFailed=对HTTP头进行HPACK解码时出错
 http2Parser.processFrameHeaders.payload=连接：[{0}]，流：[{1}]，正在处理[{1}]大小的头文件负载
-http2Parser.processFramePushPromise=请求了新的远程流ID[{0}]，但所有远程流都必须使用奇数标识符
+http2Parser.processFramePushPromise=连接 [{0}]，流 [{1}]，PUSH_PROMISE帧不应由客户端发送
 http2Parser.processFrameSettings.ackWithNonZeroPayload=接收到带有ACK标志设置和有效负载的设置帧
 http2Parser.processFrameWindowUpdate.debug=连接[{0}]，流[{1}]，窗口大小增量[{2}]
 http2Parser.processFrameWindowUpdate.invalidIncrement=接收到的窗口更新帧具有无效的增量大小[0]
