--- a/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
@@ -28,6 +28,7 @@ hexUtils.fromHex.nonHex=输入只能由十六进制数字组成
 hexUtils.fromHex.oddDigits=输入必须由偶数个十六进制数字组成
 
 uDecoder.eof=文件结尾（EOF）
+uDecoder.isHexDigit=十六进制编码无效
 uDecoder.noSlash=不允许使用编码的斜杠字符
 uDecoder.urlDecode.conversionError=使用编码[{1}]解码[{0}]失败
 uDecoder.urlDecode.missingDigit=无法解码[{0}]，因为%字符必须后跟两个十六进制数字。
