--- a/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
@@ -30,6 +30,7 @@ hexUtils.fromHex.oddDigits=输入必须由偶数个十六进制数字组成
 messageBytes.illegalCharacter=代码点[{1}]处的Unicode字符[{0}]无法编码，因为它超出了允许的0到255范围。
 
 uDecoder.eof=文件结尾（EOF）
+uDecoder.isHexDigit=十六进制编码无效
 uDecoder.noSlash=不允许使用编码的斜杠字符
 uDecoder.urlDecode.conversionError=使用编码[{1}]解码[{0}]失败
 uDecoder.urlDecode.missingDigit=无法解码[{0}]，因为%字符必须后跟两个十六进制数字。
