Improvements to Chinese translations by fangzheng

--- a/java/org/apache/catalina/util/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/util/LocalStrings_zh_CN.properties
@@ -53,3 +53,5 @@ sessionIdGeneratorBase.noSHA1PRNG=此 JVM 不支持 SecureRandom 的默认 SHA1P
 sessionIdGeneratorBase.random=初始化类[{0}]的随机数生成器时发生异常。回到java.secure.SecureRandom
 sessionIdGeneratorBase.randomAlgorithm=使用算法[{0}]初始化随机数生成器时发生异常
 sessionIdGeneratorBase.randomProvider=使用程序提供的初始化随机数生成器异常[{0}]
+
+timebucket.maintenance.error=定期维护时出现错误
