Improvements to French translations. (remm)

--- a/java/org/apache/jasper/resources/LocalStrings_fr.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_fr.properties
@@ -90,6 +90,7 @@ jsp.error.invalid.directive=Directive incorrecte
 jsp.error.invalid.expression=[{0}] contient d''incorrecte(s) expression(s) : [{1}]
 jsp.error.invalid.implicit=Le TLD implicite est invalide pour le fichier tag [{0}]
 jsp.error.invalid.implicit.version=La version JSP déclarée dans le TLD implicite pour le fichier de tag à [{0}] est invalide
+jsp.error.invalid.includeInTagFileJar=L''inclusion [{0}] n''est pas valide car elle est en dehors de /META-INF/tags pour le JAR actuel
 jsp.error.invalid.name=Le fichier [{0}] utilise le nom [{1}] dans jsp:getProperty pour un bean qui n''a pas été déclaré conformément à JSP.5.3
 jsp.error.invalid.scope=La valeur de l''attribut "scope" est invalide : [{0}] (elle doit être "page", "request", "session" ou "application")
 jsp.error.invalid.tagdir=Le répertoire du fichier Tag [{0}] ne commence pas par "/WEB-INF/tags"
