--- a/java/org/apache/catalina/realm/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/realm/LocalStrings_fr.properties
@@ -52,6 +52,7 @@ jaasRealm.authenticateSuccess=le nom d''utilisateur [{0}] a été authentifié a
 jaasRealm.beginLogin=La connection avec le JAASRealm a demandé le nom d''utilisateur [{0}] en utilisant le LoginContext de l''application [{1}]
 jaasRealm.checkPrincipal=Vérification du principal [{0}] [{1}]
 jaasRealm.classNotFound=La classe [{0}] n''a pas été trouvée
+jaasRealm.configFileNotFound=Le fichier [{0}] de configuration JAAS n''a pas été trouvé
 jaasRealm.credentialExpired=le nom d''utilisateur [{0}] N''A PAS été authentifié car son crédit a expiré (expired credential)
 jaasRealm.failedLogin=le nom d''utilisateur [{0}] N''A PAS été authentifié car son contrôle d''accès (login) a échoué
 jaasRealm.loginContextCreated=Le LoginContext JAAS a été crée pour le nom d''utilisateur [{0}]
