--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
@@ -51,12 +51,14 @@ openssl.errCheckConf=Erreur pendant la vérification de OpenSSLConf
 openssl.errMakeConf=Impossible de créer le contexte de OpenSSLConf
 openssl.errorAddingCertificate=Erreur lors de l''ajout du certificat à la chaîne: [{0}]
 openssl.errorConfiguringLocations=Erreur lors de la configuration des emplacements des certificats CA: [{0}]
+openssl.errorInit=Erreur non fatale lors de l''initialization des certificats ou de la configuration: [{0}]
 openssl.errorLoadingCertificate=Erreur lors du chargement du certificat: [{0}]
 openssl.errorLoadingCertificateRevocationListWithError=Erreur de chargement de la révocation des certificats [{0}] avec l''erreur [{1}]
 openssl.errorLoadingCertificateWithError=Erreur de chargement du certificat [{0}] avec l''erreur [{1}]
 openssl.errorLoadingPassword=Erreur lors du chargment du fichier mot de passe: [{0}]
 openssl.errorLoadingPrivateKey=Erreur lors du chargment de la clé privée: [{0}]
 openssl.errorPrivateKeyCheck=La clé privée ne correspond pas à la clé publique du certificat: [{0}]
+openssl.errorReadingPEMParameters=Erreur de lecture des paramètres PEM [{0}] pour le certificat [{1}]
 openssl.errorSSLCtxInit=Erreur d'initialisation du contexte SSL
 openssl.invalidSslProtocol=La valeur invalide [{0}] a été fournie pour l''attribut SSLProtocol
 openssl.keyManagerMissing=Aucun gestionnaire de clés trouvé
@@ -86,6 +88,7 @@ openssllibrary.ciphersFailure=Echec en essayant d'obtenir la liste des chiffres
 openssllibrary.currentFIPSMode=Mode FIPS actuel : [{0}]
 openssllibrary.engineError=Erreur lors de la création du moteur SSL
 openssllibrary.enterAlreadyInFIPSMode=La librarie est configurée pour forcer le mode FIPS mais la librairie est déjà en mode FIPS [{0}]
+openssllibrary.errorSettingSSLRandomSeed=Erreur [{1}] en définissant le germe [{0}] pour le générateur de nombres aléatoire
 openssllibrary.initializeFIPSFailed=Echec d'entrée en mode FIPS
 openssllibrary.initializeFIPSSuccess=Entrée avec succés en mode FIPS
 openssllibrary.initializedOpenSSL=OpenSSL a été initialisé avec succés en utilisant FFM [{0}]
