Improvements to Japanese translations by tak7iji

--- a/java/org/apache/catalina/realm/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/realm/LocalStrings_ja.properties
@@ -52,6 +52,7 @@ jaasRealm.authenticateSuccess=ユーザ名 [{0}] は認証に成功しました
 jaasRealm.beginLogin=アプリケーション[{1}]のLoginContextを使用して、ユーザー名[{0}]に対するJAASRealmログインが要求されました。
 jaasRealm.checkPrincipal=プリンシパル [{0}] [{1}] をチェックします
 jaasRealm.classNotFound=クラス [{0}] が見つかりませんでした
+jaasRealm.configFileNotFound=JAAS 構成リソース [{0}] が見つかりませんでした
 jaasRealm.credentialExpired=ユーザ名 [{0}] は証明書の期限が切れたために認証されません
 jaasRealm.failedLogin=ユーザ名 [{0}] はログインに失敗したために認証されませんでした
 jaasRealm.loginContextCreated=ユーザー名[{0}]用に作成されたJAAS LoginContext
