--- a/java/org/apache/jasper/resources/LocalStrings_ja.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_ja.properties
@@ -91,6 +91,7 @@ jsp.error.invalid.directive=無効なディレクティブ
 jsp.error.invalid.expression=[{0}] は無効な式を含んでいます: [{1}]
 jsp.error.invalid.implicit=[{0}]のタグファイルの暗黙のTLDが無効です
 jsp.error.invalid.implicit.version=[{0}]のタグファイルの暗黙のTLDで無効なJSPバージョンが定義されています。
+jsp.error.invalid.includeInTagFileJar=include に指定された [{0}] は、現在の JAR の /META-INF/tags の外側にあるため無効です
 jsp.error.invalid.name=ファイル [{0}] は、jsp:getProperty で bean の名前として、JSP.5.3 に従って事前に導入されていない [{1}] を使用しています
 jsp.error.invalid.scope=''scope''属性の値が無効です: [{0}] ("page"、"request"、"session"または"application"のどれかでなければいけません)
 jsp.error.invalid.tagdir=タグファイルディレクトリ [{0}] が"/WEB-INF/tags"で始まっていません
