--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_ja.properties
@@ -51,12 +51,14 @@ openssl.errCheckConf=OpenSSLConf チェック中のエラー
 openssl.errMakeConf=OpenSSLConfコンテキストが作成できませんでした
 openssl.errorAddingCertificate=証明書をチェーンに追加中にエラーが発生しました: [{0}]
 openssl.errorConfiguringLocations=CA 証明書の場所の構成エラー: [{0}]
+openssl.errorInit=証明書または設定の初期化中に致命的ではないエラーが発生しました: [{0}]
 openssl.errorLoadingCertificate=証明書の読み込みエラー: [{0}]
 openssl.errorLoadingCertificateRevocationListWithError=証明書失効 [{0}] の読み込み中にエラー [{1}] が発生しました
 openssl.errorLoadingCertificateWithError=証明書 [{0}] の読み込み中にエラー [{1}] が発生しました
 openssl.errorLoadingPassword=パスワードファイルの読み込みエラー: [{0}]
 openssl.errorLoadingPrivateKey=秘密鍵の読み込みエラー: [{0}]
 openssl.errorPrivateKeyCheck=秘密鍵が証明書の公開鍵と一致しません: [{0}]
+openssl.errorReadingPEMParameters=証明書 [{1}] の PEM パラメータ [{0}] の読み取りに失敗しました
 openssl.errorSSLCtxInit=SSLコンテキストの初期化エラー
 openssl.invalidSslProtocol=無効な値 [{0}] が SSLProtocol 属性に指定されました
 openssl.keyManagerMissing=キーマネージャが見つかりません
@@ -86,6 +88,7 @@ openssllibrary.ciphersFailure=暗号リストの取得に失敗しました
 openssllibrary.currentFIPSMode=現在のFIPSモード: [{0}]
 openssllibrary.engineError=エンジンの作成エラー
 openssllibrary.enterAlreadyInFIPSMode=AprLifecycleListener は FIPS モードに強制的に入るように構成されていますが、ライブラリはすでに FIPS モードになっています [{0}]
+openssllibrary.errorSettingSSLRandomSeed=ランダム シード [{0}] の設定によりエラー [{1}] が発生しました
 openssllibrary.initializeFIPSFailed=FIPS モードに入るのに失敗しました
 openssllibrary.initializeFIPSSuccess=FIPS モードに入りました
 openssllibrary.initializedOpenSSL=OpenSSLはFFM [{0}] を使用して正常に初期化されました
