Back-port Chinese translations

--- a/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
@@ -166,6 +166,9 @@ naming.wsdlFailed=未找到 wsdl 文件：[{0}]
 
 noPluggabilityServletContext.notAllowed=Servlet 3.0规范的第4.4节不允许从未在web.xml，web-fragment.xml文件中定义或未用@WebListener注释的ServletContextListener调用此方法。
 
+openssllistener.initializeFIPSFailed=无法进入FIPS模式
+openssllistener.sslInit=OpenSSL初始化失败
+
 propertiesRoleMappingListener.roleMappingFileEmpty=角色映射文件不能为空
 propertiesRoleMappingListener.roleMappingFileFail=加载角色映射文件[{0}]失败
 propertiesRoleMappingListener.roleMappingFileNull=角色映射文件不能为NULL
