Add noEqualsCookie option with unchanged default

--- a/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
@@ -22,6 +22,8 @@ cookies.maxCountFail=Le nombre maximum de cookies [{0}] est dépassé
 
 headers.maxCountFail=Le nombre d''en-têtes [{0}] dépasse le maximum autorisé
 
+noEqualsCookie.invalid=La valeur [{0}] n''est pas reconnue
+
 parameters.bytes=Début du traitement avec les données [{0}]
 parameters.copyFail=Echec de la copie des valeurs de paramètres originaux pour raisons de journalisation du déboguage
 parameters.decodeFail.debug=Echec de décodage de caractère, le paramètre [{0}] de valeur [{1}] a été ignoré
