--- a/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
@@ -20,9 +20,9 @@ cookies.invalidSameSiteCookies=Valeur inconnue [{0}], seules possibles : unset, 
 cookies.invalidSpecial=Cookie spécial inconnu
 cookies.maxCountFail=Le nombre maximum de cookies [{0}] est dépassé
 
-headers.maxCountFail=Le nombre d''en-têtes [{0}] dépasse le maximum autorisé
+cookiesWithoutEquals.invalid=La valeur [{0}] n''est pas reconnue
 
-noEqualsCookie.invalid=La valeur [{0}] n''est pas reconnue
+headers.maxCountFail=Le nombre d''en-têtes [{0}] dépasse le maximum autorisé
 
 parameters.bytes=Début du traitement avec les données [{0}]
 parameters.copyFail=Echec de la copie des valeurs de paramètres originaux pour raisons de journalisation du déboguage
