--- a/java/org/apache/tomcat/util/http/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_zh_CN.properties
@@ -20,9 +20,9 @@ cookies.invalidSameSiteCookies=未知设置[{0}]，必须是以下之一：unset
 cookies.invalidSpecial=Cookies：未知特殊的Cookie
 cookies.maxCountFail=检测到超过Cookie最大允许的数量[{0}]
 
-headers.maxCountFail=检测到超过了允许设置的最大header 数[{0}]
+cookiesWithoutEquals.invalid=值[{0}]未识别
 
-noEqualsCookie.invalid=值[{0}]未识别
+headers.maxCountFail=检测到超过了允许设置的最大header 数[{0}]
 
 parameters.bytes=开始处理输入[{0}]
 parameters.copyFail=无法创建以调试日志记录为目的的原始参数值的副本
