Improve Spanish translations. Provided by Fernando.

--- a/java/org/apache/catalina/authenticator/jaspic/LocalStrings_es.properties
+++ b/java/org/apache/catalina/authenticator/jaspic/LocalStrings_es.properties
@@ -18,3 +18,5 @@ authConfigFactoryImpl.zeroLengthAppContext=Un nombre de aplicación con nombre d
 persistentProviderRegistrations.deleteFail=El archivo temporal [{0}] no puede ser eliminado
 persistentProviderRegistrations.existsDeleteFail=El archivo temporal [{0}] ya existe y no puede ser borrado
 persistentProviderRegistrations.moveFail=Fallo al mover [{0}] a [{1}]
+
+simpleServerAuthConfig.noModules=No hay ningún ServerAuthModules configurado
