--- a/java/org/apache/catalina/tribes/group/interceptors/LocalStrings_es.properties
+++ b/java/org/apache/catalina/tribes/group/interceptors/LocalStrings_es.properties
@@ -42,6 +42,7 @@ staticMembershipInterceptor.sendShutdown.failed=El aviso de apagado falló.
 tcpFailureDetector.failureDetection.failed=No se pudo realizar la verificación de detección de fallos, se asume que el membro esta abajo.[{0}]
 tcpFailureDetector.heartbeat.failed=Imposible ejecutar heartbeat en el TcpFailureDetector.
 tcpFailureDetector.member.disappeared=Verificación completada. Miembro desaparecido[{0}]
+tcpFailureDetector.memberDisappeared.verify=Se recibió el mensaje memberDisappeared[{0}]. Lo verificaremos.
 tcpFailureDetector.still.alive=Verificación completa. El miembro aun esta vivo [{0}]
 tcpFailureDetector.suspectMember.alive=Se confima que esta vivo el miembro.[{0}]\n
 
