--- a/java/org/apache/catalina/util/LocalStrings_es.properties
+++ b/java/org/apache/catalina/util/LocalStrings_es.properties
@@ -22,6 +22,8 @@ introspection.classLoadFailed=Fallo al cargar la clase [{0}]
 
 lifecycleBase.initFail=Fallo al iniciar el componente [{0}]
 
+lifecycleMBeanBase.registerFail=No se pudo registrar el objeto [{0}] con el nombre [{1}] durante la inicialización del componente
+
 netmask.cidrNegative=El CIDR [{0}] es negativo
 
 parameterMap.locked=No se permiten modificaciones en un ParameterMap bloqueado
