--- a/java/org/apache/coyote/http2/LocalStrings_es.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_es.properties
@@ -52,6 +52,7 @@ upgradeHandler.sendPrefaceFail=La conexión [{0}], Falló al enviar el prefacio 
 upgradeHandler.socketCloseFailed=Error cerrando el socket
 upgradeHandler.stream.even=Un nuevo flujo remoto con  ID [{0}]  fue solicitado, pero todos los flujos remotos deben usar identificadores raros
 upgradeHandler.upgrade=La conexión [{0}], HTTP/1.1 se actualizó al flujo [1]\n
+upgradeHandler.upgrade.fail=Conexión [{0}], actualización fallida HTTP/1.1
 upgradeHandler.upgradeDispatch.entry=Entrada, Conexión [{0}], SocketStatus [{1}]\n
 upgradeHandler.upgradeDispatch.exit=Salida, Conexión  [{0}], Estado de Socket [{1}]
 upgradeHandler.writeHeaders=Conexión [{0}], Flujo [{1}]
