--- a/java/org/apache/catalina/connector/LocalStrings_es.properties
+++ b/java/org/apache/catalina/connector/LocalStrings_es.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 
 coyoteAdapter.accesslogFail=Excepción al intentar añadir una entrada al historial de acceso
+coyoteAdapter.authorize=Autorizando al usuario [{0}] usando el Reino de Tomcat
 coyoteAdapter.checkRecycled.response=Se encontró una respuesta no reciclable y se crecicló a la fuerza
 coyoteAdapter.debug=La variable [{0}] tiene el valor [{1}]
 
@@ -39,6 +40,7 @@ coyoteRequest.filterAsyncSupportUnknown=Imposible determinar si algún filtro no
 coyoteRequest.getInputStream.ise=getReader() ya ha sido llamado para este requerimiento
 coyoteRequest.getReader.ise=getInputStream() ya ha sido llamado para este requerimiento
 coyoteRequest.gssLifetimeFail=Fallo al obtener el tiempo de vida restante para el usuario principal [{0}]\n
+coyoteRequest.maxPostSizeExceeded=La solicitud multi-part contenía datos de parámetros (excluyendo los archivos cargados) que excedían el límite de maxPostSize establecido en el conector asociado
 coyoteRequest.noMultipartConfig=Imposible procesar partes debido a que se ha proveído una configuración no multipartes
 coyoteRequest.parseParameters=Excepción lanzada al procesar parámetros POST
 coyoteRequest.postTooLarge=No se analizaron los parámetros porque la medida de los datos enviados era demasiado grande. Usa el atributo maxPostSize del conector para resolver esto en caso de que la aplicación debiera de aceptar POSTs más grandes.
