--- a/java/org/apache/catalina/webresources/LocalStrings_es.properties
+++ b/java/org/apache/catalina/webresources/LocalStrings_es.properties
@@ -20,3 +20,4 @@ dirResourceSet.notDirectory=El directorio especificado por la base y el camino i
 extractingRoot.targetFailed=Fallo al crear directorio [{0}] para los archivos JAR extraidos
 
 standardRoot.createUnknownType=Imposible crear  WebResourceSet de tipo desconocido [{0}]\n
+standardRoot.lockedFile=La aplicación web [{0}] no pudo cerrar el archivo [{1}] abierto a través del siguiente seguimiento de pila
