Improvements to French translations (remm)

--- a/java/org/apache/tomcat/util/compat/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings_fr.properties
@@ -13,5 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+jre18Compat.javaPre18=Le code est considéré être exécuté sur une JVM antérieure à Java 18 car la méthode n'a pas été trouvée
+
 jre22Compat.javaPre22=Le code est considéré être exécuté sur une JVM antérieure à Java 22 car la classe n'a pas été trouvée
 jre22Compat.unexpected=Impossible de créer les références vers les classes et méthodes de Java 22
