--- a/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
@@ -105,6 +105,8 @@ wsRemoteEndpoint.tooMuchData=Un ping ou pong ne peut pas envoyer plus de 125 oct
 wsRemoteEndpoint.writeTimeout=Délai d'attente dépassé pour l'écriture bloquante
 wsRemoteEndpoint.wrongState=La terminaison distante est dans l''état [{0}] ce qui est invalide pour la méthode appelée
 
+wsRemoteEndpointClient.writeFailed=L''écriture vers la teminaison distante a échouée. Le délai d''attente maximum passé à la méthode était [{0}] et celui utilisé pour l''écriture était [{1}]
+
 wsSession.closed=La session WebSocket [{0}] a été fermée et aucune méthode (à part close()) ne peut être appelée sur une session fermée
 wsSession.created=Création de la session WebSocket [{0}]
 wsSession.doClose=Fermeture de la session WebSocket [{0}]
