--- a/java/org/apache/tomcat/util/compat/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings_ja.properties
@@ -13,5 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+jre18Compat.javaPre18=メソッドが見つからないため、Java 18 以前の JVM で実行されていると仮定します
+
 jre22Compat.javaPre22=クラスが見つからないため、コードが Java 22 以前の JVM で実行されていると仮定します
 jre22Compat.unexpected=Java 22のクラストメソッドへの参照を作成するのに失敗しました
