--- a/java/org/apache/tomcat/util/compat/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings_fr.properties
@@ -16,6 +16,8 @@
 jre16Compat.javaPre16=Le code est considéré être exécuté sur une JVM antérieure à Java 16 car la classe n'a pas été trouvée
 jre16Compat.unexpected=Impossible de créer les références vers les classes et méthodes de Java 16
 
+jre18Compat.javaPre18=Le code est considéré être exécuté sur une JVM antérieure à Java 18 car la méthode n'a pas été trouvée
+
 jre19Compat.javaPre19=Classe non trouvée donc le code est exécutée sur une JVM antérieure à Java 19
 
 jre22Compat.javaPre22=Le code est considéré être exécuté sur une JVM antérieure à Java 22 car la classe n'a pas été trouvée
