Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/tomcat/util/compat/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings_ja.properties
@@ -16,6 +16,8 @@
 jre16Compat.javaPre16=クラスが見つからないため、コードがJava 16未満のJVMで実行されていると仮定します
 jre16Compat.unexpected=Java 16クラスおよびメソッドへの参照の作成に失敗しました
 
+jre18Compat.javaPre18=メソッドが見つからないため、Java 18 以前の JVM で実行されていると仮定します
+
 jre19Compat.javaPre19=クラスが見つからないため、Java 19より前のJVMでコードが実行されていると仮定します
 
 jre22Compat.javaPre22=クラスが見つからないため、コードが Java 22 以前の JVM で実行されていると仮定します
