Rename i18n string after earlier refactoring

--- a/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
@@ -82,7 +82,6 @@ http2Protocol.jmxRegistration.fail=HTTP/2协议注册JMX失败
 
 pingManager.roundTripTime=连接[{0}]往返时间测量为[{1}]ns
 
-stream.clientCancel=客户端在响应完成前重置了数据流
 stream.closed=连接[{0}]，流[{1}]，一旦关闭就无法写入流
 stream.header.case=连接[{0}]，流[{1}]，HTTP标头名称[{2}]必须小写
 stream.header.connection=HTTP/2请求中不允许连接[{0}]、流[{1}]、HTTP头[{2}]
@@ -124,6 +123,7 @@ streamStateMachine.invalidFrame=连接[{0}]、流[{1}]、状态[{2}]、帧类型
 
 upgradeHandler.allocate.debug=连接[{0}]，流[{1}]，已分配[{2}]字节
 upgradeHandler.allocate.left=连接[{0}]，流[{1}]，[{2}]字节未分配 - 尝试分配给子项
+upgradeHandler.clientCancel=客户端在响应完成前重置了数据流
 upgradeHandler.connectionError=连接错误
 upgradeHandler.fallToDebug=注意：往后出现 HTTP/2 流的错误将以 DEBUG 日志级别输出。
 upgradeHandler.goaway.debug=连接[{0}]，离开，最后的流[{1}]，错误码[{2}]，调试数据[{3}]
