--- a/java/org/apache/coyote/http2/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_fr.properties
@@ -85,7 +85,6 @@ http2Protocol.jmxRegistration.fail=L'enregistrement dans JMX du protocole HTTP/2
 
 pingManager.roundTripTime=Connection [{0}] Le temps d''aller retour est de [{1}]ns
 
-stream.clientCancel=Le client a réinitialisé la stream avant que la réponse ne soit complète
 stream.closed=Connection [{0}], Flux [{1}], Impossible d''écrire sur un flux après sa fermeture
 stream.header.case=Connection [{0}], Flux [{1}], Le nom d''en-tête HTTP [{2}] doit être en miniscules
 stream.header.connection=Connection [{0}], Flux [{1}], L''en-tête HTTP [{2}] n''est pas autorisé dans une requête HTTP/2
@@ -129,6 +128,7 @@ streamStateMachine.invalidReset=Connection [{0}], Stream [{1}], la Stream ne doi
 
 upgradeHandler.allocate.debug=Connection [{0}], Flux [{1}], [{2}] octets alloués
 upgradeHandler.allocate.left=Connection [{0}], Flux [{1}], [{2}] octets désalloués, essai d''allocation aux enfants
+upgradeHandler.clientCancel=Le client a réinitialisé la stream avant que la réponse ne soit complète
 upgradeHandler.connectionError=Erreur de la connection
 upgradeHandler.enableRfc7450Priorities=Connection [{0}], les priorités RFC 7450 ne doivent pas être activées après avoir été désactivées dans la trame initiale des paramètres de connection (voir la RFC 9218)
 upgradeHandler.fallToDebug=\n\
