--- a/java/org/apache/coyote/http2/LocalStrings_ja.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_ja.properties
@@ -85,7 +85,6 @@ http2Protocol.jmxRegistration.fail=HTTP/2プロトコルのJMX登録に失敗し
 
 pingManager.roundTripTime=コネクション [{0}] の往復時間は [{1}] ns でした。
 
-stream.clientCancel=レスポンスが完了する前にクライアントがストリームをリセットしました
 stream.closed=コネクション [{0}]、ストリーム [{1}]、切断したストリームには書き込みできません
 stream.header.case=コネクション [{0}]、ストリーム [{1}]、HTTP ヘッダー名 [{2}] は小文字でなければなりません。
 stream.header.connection=コネクション [{0}]、ストリーム [{1}]、HTTP/2 のリクエストには HTTP ヘッダー [{2}] を指定することはできません。
@@ -129,6 +128,7 @@ streamStateMachine.invalidReset=コネクション [{0}]、ストリーム [{1}]
 
 upgradeHandler.allocate.debug=コネクション [{0}]、ストリーム [{1}]、割り当てられた [{2}] バイト
 upgradeHandler.allocate.left=コネクション [{0}]、ストリーム [{1}]、[{2}] バイトが未割り当て - 子への割り当てを試みています
+upgradeHandler.clientCancel=レスポンスが完了する前にクライアントがストリームをリセットしました
 upgradeHandler.connectionError=接続エラー
 upgradeHandler.enableRfc7450Priorities=接続 [{0}] は、RFC 7450 優先順位が初期接続設定フレームで無効にされた後に有効にならない場合があります (RFC 9218 を参照)
 upgradeHandler.fallToDebug=\n\
