i18n zh translation improvement
translation improvement

--- a/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
@@ -267,7 +267,7 @@ standardHostValve.customStatusFailed=无法正确调度自定义错误页[{0}]
 
 standardPipeline.basic.start=启动新基本阀时出错
 standardPipeline.basic.stop=停止旧基本阀时出错
-standardPipeline.valve.destroy=破坏阀门错误
+standardPipeline.valve.destroy=销毁阀门错误
 standardPipeline.valve.start=错误启动阀
 standardPipeline.valve.stop=错误截止阀
 
