--- a/java/javax/servlet/http/LocalStrings_zh_CN.properties
+++ b/java/javax/servlet/http/LocalStrings_zh_CN.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-err.cookie_name_blank=Cookie名称不能为null或零长度
+err.cookie_name_blank=Cookie名称不能为空
 err.cookie_name_is_token=Cookie name[{0}]是一个保留令牌
 err.io.indexOutOfBounds=为大小为[{2}]的数组指定的偏移量[{0}]和/或长度[{1}]无效。
 err.io.nullArray=Null在write方法中传递给字节数组
