--- a/java/org/apache/coyote/LocalStrings_zh_CN.properties
+++ b/java/org/apache/coyote/LocalStrings_zh_CN.properties
@@ -42,7 +42,7 @@ abstractProtocol.waitingProcessor.add=添加处理器[{0}]到等待队列
 abstractProtocol.waitingProcessor.remove=将从等待的处理器中移除处理器[{0}]
 
 abstractProtocolHandler.asyncTimeoutError=错误的处理异步超时
-abstractProtocolHandler.destroy=正在摧毁协议处理器 [{0}]
+abstractProtocolHandler.destroy=正在销毁协议处理器 [{0}]
 abstractProtocolHandler.init=初始化协议处理器 [{0}]
 abstractProtocolHandler.pause=暂停ProtocolHandler[{0}]
 abstractProtocolHandler.portOffset=ProtocolHandler[{0}]的基本端口为[{1}]，端口偏移量为[{2}]
@@ -63,7 +63,7 @@ request.nullReadListener=传递给setReadListener（）的侦听器不能为空
 request.readListenerSet=已设置非阻塞读取侦听器
 
 response.encoding.invalid=JRE无法识别编码[{0}]
-response.noTrailers.notSupported=不能为此响应设置拖车字段供应商。底层协议不支持尾部字段，或者协议要求在提交响应之前设置供应商
+response.noTrailers.notSupported=不能为此响应设置trailers尾部部分。底层协议不支持尾部字段，或者协议要求在提交响应之前设置尾部字段
 response.notAsync=只有在异步处理或HTTP升级处理中切换到非阻塞IO才有效
 response.notNonBlocking=当响应尚未进入非阻塞模式时，调用 isReady() 无效
 response.nullWriteListener=传递给setWriteListener（）的侦听器不能为空
