modify maintenance delay and add parameter validation.
modify maintenance delay and add parameter validation.

--- a/java/org/apache/catalina/filters/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/filters/LocalStrings_zh_CN.properties
@@ -54,6 +54,8 @@ httpHeaderSecurityFilter.committed=在进入HttpHeaderSecurityFilter的时候响
 
 rateLimitFilter.initialized=RateLimitFilter [{0}] 初始值是每 [{2}] 秒 [{1}] 个请求。实际值是每 [{4}] 秒 [{3}]。 [{5}]。
 rateLimitFilter.maxRequestsExceeded=[{0}] 来自于 [{2}] 的请求数 [{1}] 已超过阈值每 [{4}] 秒 [{3}] 。
+rateLimitFilter.invalidBucketDuration=时间桶长度配置 [{0}]无效
+rateLimitFilter.invalidBucketRequests=请求数阈值配置[{0}]无效
 
 remoteCidrFilter.invalid=为[{0}]提供的配置无效。有关详细信息，请参阅以前的消息。
 remoteCidrFilter.noRemoteIp=客户端没有 IP 地址，请求被拒绝。
