--- a/java/org/apache/catalina/connector/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/connector/LocalStrings_fr.properties
@@ -86,6 +86,7 @@ coyoteResponse.setBufferSize.ise=Impossible de changer la taille du tampon aprè
 inputBuffer.requiresNonBlocking=Pas disponible en mode non bloquant
 inputBuffer.streamClosed=Le flux a été fermé
 
+outputBuffer.closed=La réponse ne peut pas être écrite après qu'elle ait été fermée
 outputBuffer.writeNull=L'argument String dans write(String, int, int) ne doit pas être null
 
 request.asyncNotSupported=Un filtre ou un Servlet de la chaîne actuelle ne supporte pas le mode asynchrone
