Update Japanese translations (tak7iji)

--- a/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
@@ -23,6 +23,8 @@ cookies.invalidSameSiteCookies=不明な設定 [{0}] は、次のうちのいず
 cookies.invalidSpecial=Cookies: 不明な特別な Cookie
 cookies.maxCountFail=最大数[{0}]以上のクッキーが検出されました。
 
+cookiesWithoutEquals.invalid=値 [{0}] は認識されません
+
 headers.maxCountFail=検出したヘッダー数 [{0}] は上限値を越えています。
 
 parameters.bytes=入力[{0}]で処理を開始します。
