Update Chinese translations (Ch_jp)

--- a/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
@@ -192,8 +192,8 @@ standardContext.filterStart=启动过滤器异常[{0}]
 standardContext.invalidWrapperClass=[{0}] 不是StandardWrapper的子类
 standardContext.isUnavailable=此应用程序目前不可用
 standardContext.listenerFail=一个或多个listeners启动失败，更多详细信息查看对应的容器日志文件
-standardContext.listenerStart=异常将上下文初始化事件发送到类的侦听器实例.[{0}]
-standardContext.listenerStop=例外情况发送上下文删除事件[{0}]，以便列表实例
+standardContext.listenerStart=发送上下文初始化事件到类的侦听器实例 [{0}] 时出现异常
+standardContext.listenerStop=发送上下文销毁事件到类的侦听器实例 [{0}] 时出现异常
 standardContext.loadOnStartup.loadException=web应用程序[{0}]中的Servlet[{1}]引发了load（）异常
 standardContext.loginConfig.errorPage=表单错误页[{0}]必须以"/"开始
 standardContext.loginConfig.errorWarning=警告：Servlet 2.4中，表单错误页[{0}]必须以"/"开始
@@ -256,9 +256,9 @@ standardHostValve.customStatusFailed=无法正确调度自定义错误页[{0}]
 
 standardPipeline.basic.start=启动新基本阀时出错
 standardPipeline.basic.stop=停止旧基本阀时出错
-standardPipeline.valve.destroy=破坏阀门错误
-standardPipeline.valve.start=错误启动阀
-standardPipeline.valve.stop=错误截止阀
+standardPipeline.valve.destroy=销毁阀时出错
+standardPipeline.valve.start=启动阀时出错
+standardPipeline.valve.stop=停止阀时出错
 
 standardServer.accept.error=尝试在侦听shutdown命令的套接字上接受IO异常
 standardServer.accept.readError=尝试读取关机命令时发生IO异常
