--- a/java/jakarta/servlet/LocalStrings_zh_CN.properties
+++ b/java/jakarta/servlet/LocalStrings_zh_CN.properties
@@ -20,7 +20,7 @@ err.not_iso8859_1=不是ISO 8859-1字符：[{0}]
 
 httpConstraintElement.invalidRolesDeny=使用 DENY 时可能未指定角色
 
-httpMethodConstraintElement.invalidMethod=无效的HTTP.方法
+httpMethodConstraintElement.invalidMethod=无效的HTTP方法
 
 value.false=否
 value.true=true
