--- a/java/jakarta/servlet/http/LocalStrings_zh_CN.properties
+++ b/java/jakarta/servlet/http/LocalStrings_zh_CN.properties
@@ -19,7 +19,7 @@
 cookie.attribute.invalidName.notToken=Cookie属性名[{0}]无效,因为它不是令牌
 cookie.attribute.invalidName.null=Cookie属性名称不能为空
 
-err.cookie_name_blank=Cookie名称不能为null或零长度
+err.cookie_name_blank=Cookie名称不能为空
 err.cookie_name_is_token=Cookie name[{0}]是一个保留令牌
 err.io.indexOutOfBounds=为大小为[{2}]的数组指定的偏移量[{0}]和/或长度[{1}]无效。
 err.io.nullArray=Null在write方法中传递给字节数组
