Improvements to French translations. (remm)

--- a/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_fr.properties
@@ -119,6 +119,7 @@ wsSession.instanceCreateFailed=Echec de la création de l'instance de l'Endpoint
 wsSession.instanceNew=L'enregistrement de l'instance de la terminaison a échoué
 wsSession.invalidHandlerTypePong=Un gestionnaire de message pong doit implémenter MessageHandler.Whole
 wsSession.messageFailed=Impossible d'écrire le message WebSocket complet car la connection a été fermée
+wsSession.onClose.entry=Le message de fermeture avec la raison [{0}] a été reçu pour la sesion [{1}] dans l''état [{2}]
 wsSession.removeHandlerFailed=Impossible d''enlever le gestionnaire [{0}] car il n''était pas enregistré dans la session
 wsSession.sendCloseFail=Impossible d''envoyer le message de fermeture pour la session [{0}] à la terminaison distante
 wsSession.timeout=Le délai d''attente maximum de la session WebSocket [{0}] a été dépassé
