--- a/java/javax/el/LocalStrings_zh_CN.properties
+++ b/java/javax/el/LocalStrings_zh_CN.properties
@@ -38,10 +38,10 @@ importHandler.invalidClassNameForStatic=为静态导入 [{1}] 指定的类 [{0}]
 importHandler.invalidStaticName=要导入的静态方法或字段的名称 [{0}] 必须包含类
 importHandler.staticNotFound=在导入 [{2}] 的类 [{1}] 中找不到静态导入 [{0}]
 
-lambdaExpression.tooFewArgs=对于至少需要 [{1}] 的 lambda 表达式，仅提供了 [{0}] 个自变量
+lambdaExpression.tooFewArgs=对于至少需要 [{1}] 个参数的 lambda 表达式，仅提供了 [{0}] 个参数
 
-objectNotAssignable=无法将类型为 [{0}] 的对象添加到类型为 [{1}] 的对象阵列
-propertyNotFound=在类型 [{0}] 上未找到属性 [{1}]
+objectNotAssignable=无法将类型为 [{0}] 的对象添加到类型为 [{1}] 的对象数组
+propertyNotFound=属性 [{1}] 在类型 [{0}] 上不存在
 propertyNotReadable=属性 [{1}] 在类型 [{0}] 上不可读
 propertyNotWritable=属性 [{1}] 在类型 [{0}] 上不可写
 propertyReadError=在类型 [{0}] 上读取 [{1}] 时出错
